--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: ${DB_URL:jdbc:mysql://localhost:3306/iot_rfid}
     username: ${DB_USERNAME:root}
-    password: ${DB_PASSWORD:quancntt2003}
+    password: ${DB_PASSWORD:Nhuan2002@}
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     properties:
